Updated openapi generated files and swagger.json
