# src/app/core/data-services/model/logoutDto.ts
@@ -1,0 +1,18 @@
+/**
+ * ENTropy API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface LogoutDto { 
+    /**
+     * Refresh token given by the backend
+     */
+    refresh_token: string;
+}
+
