# src/app/core/data-services/model/models.ts
@@ -1,6 +1,7 @@
 export * from './createInstructorDto';
 export * from './createStudentDto';
 export * from './loginDto';
+export * from './logoutDto';
 export * from './refreshTokenDto';
 export * from './updateInstructorDto';
 export * from './updateStudentDto';
